--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "keen-slider": "6.8.6",
     "mapbox-gl": "3.5.2",
     "negotiator": "0.6.3",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "next-auth": "4.24.7",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
