--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@fullcalendar/react": "6.1.15",
     "@fullcalendar/timegrid": "6.1.15",
     "@hookform/resolvers": "3.9.0",
-    "@mui/lab": "5.0.0-alpha.172",
-    "@mui/material": "5.16.4",
+    "@mui/lab": "^5.0.0-alpha.172",
+    "@mui/material": "^5.16.4",
     "@mui/material-nextjs": "5.16.4",
     "@prisma/client": "5.17.0",
     "@reduxjs/toolkit": "2.2.6",
