--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@fullcalendar/timegrid": "6.1.15",
     "@hookform/resolvers": "3.9.0",
     "@mui/lab": "^5.0.0-alpha.172",
-    "@mui/material": "^5.16.4",
+    "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "5.16.4",
     "@prisma/client": "5.17.0",
     "@reduxjs/toolkit": "2.2.6",
@@ -64,7 +64,7 @@
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
     "react-colorful": "5.6.1",
-    "react-datepicker": "7.3.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "18.3.1",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.52.1",
