--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "date-fns": "3.6.0",
     "emoji-mart": "5.6.0",
     "input-otp": "1.2.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "keen-slider": "6.8.6",
     "mapbox-gl": "3.5.2",
     "negotiator": "0.6.3",
