--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "negotiator": "0.6.3",
     "next": "^14.2.6",
     "next-auth": "4.24.7",
+    "pdf-lib": "^1.17.1",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
     "react-colorful": "5.6.1",
