--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fullcalendar/react": "6.1.15",
     "@fullcalendar/timegrid": "6.1.15",
     "@hookform/resolvers": "3.9.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "5.16.4",
